force-app/main/default/objects/ARTL_RFS_Mapping__mdt/ARTL_RFS_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>RFS Mapping</label>
    <pluralLabel>RFS Mappings</pluralLabel>
</CustomObject>