force-app/main/default/objects/ARTL_RFS_Mapping__mdt/fields/Customer_Segment__c.field-meta.xml
<CustomField>
    <fullName>Customer_Segment__c</fullName>
    <label>Customer Segment</label>
    <length>50</length>
    <type>Text</type>
</CustomField>