force-app/main/default/objects/ARTL_RFS_Mapping__mdt/fields/Media__c.field-meta.xml
<CustomField>
    <fullName>Media__c</fullName>
    <label>Media</label>
    <length>30</length>
    <type>Text</type>
</CustomField>