force-app/main/default/objects/ARTL_RFS_Mapping__mdt/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <label>Service Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>